fix alignment for launch app button on mobile sidebar

--- a/src/components/other/Sidebar.css
+++ b/src/components/other/Sidebar.css
@@ -98,6 +98,7 @@
   flex-direction: column;
   gap: 10px;
   width: 100%;
+  align-items: center;
 }
 
 .nav__bottom-part__buttons > .button {
